issue fix- main berry image / search box overlap

--- a/berry_styles.css
+++ b/berry_styles.css
@@ -68,7 +68,7 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     max-width:50%;
-    height: auto;
+    height: 50%;
     position: relative;
     top: 30px;
     border-radius: 20%;
